--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
     needs: [Npm-Test]
     runs-on: ubuntu-latest
     steps:
-      - name: SSH into gcloud vm and run docker compose
+      - name: SSH into aws vm and run docker compose
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VM_HOST }}
@@ -24,7 +24,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            cd /usr/apps/docker-react/
+            cd /home/ubuntu/apps/docker-react/
             docker compose down
             docker system prune -f
             sudo git pull
